--- a/index.css
+++ b/index.css
@@ -31,6 +31,12 @@ img {
 ul{
     list-style-type: none;
     padding: 0;
+    color: white;
+}
+ul li{
+    background-color: aqua;
+    margin: 2px;
+    padding: 5px;
 }
 h1{
     font-size: 25px;
